# GW2_WvWbuilder

./: .editorconfig  .env.example  .env.staging.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT_FINAL_REPORT.md  AUDIT_RESUME_EXECUTIF.md  AUTH_SUCCESS.md  BUILDER_UI_COMPLETE.md  BUILDER_V2_REFONTE_COMPLETE.md  CHANGELOG.md  CHECK_BACKEND.sh  CI_CD_FINAL_CORRECTIONS.md  CI_CD_GITHUB_ACTIONS_REAL_REPORT.md  CI_CD_GITHUB_VALIDATION_RESULTS.md  CI_CD_OPTION_B_FAILURE_REPORT.md  CI_CD_OPTION_C_FINAL_FIX.md  CI_CD_PROGRESS_REPORT.md  CI_CD_REAL_FIX_FOUND.md  CI_CD_VERIFICATION_GUIDE.md  CI_VALIDATION_REPORT.md  CLAUDE_AI_INTEGRATION_COMPLETE.md  CLEANUP_ANALYSIS.md  CLEANUP_FINAL_ANALYSIS.md  CLEANUP_MARKDOWN_ANALYSIS.md  CLEANUP_PLAN_v4.3.1.md  CLEANUP_SUMMARY.md  CLEANUP_URGENT.sh  COMPOSITION_DISPLAY_COMPLETE.md  CONTRIBUTING.md  DASHBOARD_FIX_REPORT.md  DASHBOARD_REDESIGN_SUMMARY.md  DEPLOYMENT.md  E2E_SETUP_INSTRUCTIONS.md  E2E_TEST_STATUS.md  EXECUTIVE_FINAL_REPORT.md  FINALIZATION_DEBUG_REPORT.md  FINALIZATION_PROGRESS.md  FINALIZATION_REPORT.md  (+89 more)
backend/: .bandit.skips  .coveragerc  .dockerignore  .env.example  .env.test  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .yamllint.yaml  ALL_FIXES_SUMMARY.md  API_READY.md  AUDIT_REPORT.md  COMMIT_MESSAGE.txt  COMPOSITION_MEMBERS_FIX_SUMMARY.md  CONTRIBUTING.md  CORRECTIONS_TODO.md  DOCUMENTATION_INDEX.md  Dockerfile  EXECUTE_NOW.md  EXECUTE_NOW.sh  EXECUTIVE_SUMMARY.md  FINAL_COMPLETION_REPORT.md  FINAL_DELIVERY_REPORT.md  FINAL_IMPORT_FIX.txt  FINAL_REPORT.md  GIT_COMMIT_READY.md  GIT_COMMIT_TESTS.md  IMPORTS_FIX_COMPLETE.md  INCREASE_COVERAGE_GUIDE.md  MISSION_COMPLETE.txt  Makefile  PHASE2_COMPLETE.md  PHASE2_COMPLETION_REPORT.md  PHASE2_SUMMARY.md  PHASE3_EXECUTION_COMPLETE.md  PHASE3_FINAL_REPORT.md  PHASE3_SUMMARY.md  PHASE4_CICD_REPORT.md  (+71 more)
backend/.github/: environments.yml
backend/alembic/versions/: optimize_indexes_and_constraints.py
backend/app/: __init__.py  config.py  lifespan.py  main.py  main.py.bak  worker.py
backend/app/ai/: __init__.py  adaptive_meta_runner.py  meta_analyzer.py  meta_weights_updater.py  patch_monitor.py
backend/app/api/: dependencies.py  deps.py  exception_handlers.py  middleware.py
backend/app/core/: __init__.py  cache.py  caching.py  config.py  database.py  database_utils.py  db_monitor.py  deps.py  exceptions.py  hashing.py  key_rotation.py  key_rotation_service.py  limiter.py  logging.py  logging_config.py  middleware.py  pagination.py  performance.py  security.py  security.py.bak  utils.py  webhook_helpers.py
backend/app/crud/: __init__.py  base.py  base_async.py  build.py  crud_build.py  crud_composition.py  crud_elite_specialization.py  crud_permission.py  crud_profession.py  crud_role.py  crud_tag.py  crud_team.py  crud_team_member.py  crud_webhook.py  elite_specialization.py  profession.py  role.py  user.py
backend/app/database/: __init__.py  base.py
backend/app/db/: __init__.py  base_class.py  db_config.py  dependencies.py  factories.py  session.py
backend/app/models/: __init__.py  association_tables.py  base.py  base_model.py  base_models.py  build.py  build_profession.py  composition.py  composition_tag.py  elite_specialization.py  enums.py  models.py  permission.py  profession.py  registry.py  role.py  tag.py  team.py  team_member.py  token.py  token_models.py  user.py  user_role.py  webhook.py
backend/app/schemas/: __init__.py  build.py  composition.py  elite_specialization.py  mode_splits.py  msg.py  optimization.py  permission.py  profession.py  response.py  role.py  tag.py  team.py  team_member.py  token.py  user.py  webhook.py
backend/app/services/: gw2_api.py  key_rotation.py  reporter.py  webhook_service.py  weights_presets.py
backend/config/: locust_config.json  webhook_load_test_config.json
backend/config/optimizer/: pve_fractale.yml  pve_openworld.yml  pve_raid.yml  wvw_guild.yml  wvw_roaming.yml  wvw_zerg.yml
backend/data/: gw2_mode_differences.json  wvw_pve_split_balance.json
backend/docs/: ADVANCED_USAGE.md  ARCHITECTURE.md  DEPLOYMENT.md  KEY_ROTATION.md  MIGRATIONS.md  MODELS.md  MONITORING.md  PERFORMANCE.md  PERFORMANCE_TESTS.md  SECURITY_GUIDE.md  WEBHOOKS.md
backend/migrations/: README.md  env.py  remove_obsolete_columns.py  remove_obsolete_columns_from_team_members.py
backend/migrations/versions/: 2025_09_08_1805-0cad28c6411f_fix_build_professions_primary_key.py  2025_09_08_1809-df27d93012b6_merge_heads_and_fix_build_professions.py  2025_09_21_1835_add_missing_fields_to_elite_specializations.py  2025_10_03_1300-fix_missing_migration_reference.py  a9e182a70b39_initial_migration.py
backend/monitoring/: README.md
backend/monitoring/prometheus/: prometheus.yml
backend/scripts/: check_code_quality.sh  check_models.py  create_fresh_db.py  create_schema.sql  fetch_wvw_pve_differences.py  fix_elite_specializations.py  fix_mypy_imports.py  fix_test_user.py  init_gw2_data.py  inspect_db.py  recreate_build_professions.sql  reset_test_db.py  run_full_tests_and_coverage.sh  run_load_test.sh  run_webhook_load_test.py  security_check.py  seed_test_user.py  setup_prod_db.sh
backend/test_reports/: junit.xml
backend/tests/: README.md  TEST_PROGRESS.md  __init__.py  config.py  conftest.py  conftest_fixtures.py  conftest_new.py  conftest_overrides.py  conftest_updated.py  constants.py  debug_auth_test.py  factories.py  gw2_wvwbuilder.db  helpers.py  pytest.ini  test_api_compositions.py  test_api_compositions_edges.py  test_api_professions.py  test_api_roles.py  test_api_users.py  test_api_users_edges.py  test_builds_pagination.py  test_config.py  test_crud_builds.py  test_db_monitor.py  test_db_schema.py  test_dependencies.py  test_edges_more.py  test_errors.py  test_example.py  test_fixtures.py  test_meta_analyzer.py  test_meta_weights_updater.py  test_models.py  test_models_base.py  test_patch_monitor.py  test_routes_auth.py  test_routes_builds.py  test_routes_teams.py  test_routes_users.py  (+9 more)
backend/tests/api/: test_api_base.py  test_api_base_new.py  test_api_test_auth_endpoints.py  (+10 more)
(+589 files in other folders)
